--- a/index.html
+++ b/index.html
@@ -80,6 +80,6 @@
         <p>&copy; 2026 TMEB Consulting. Todos os direitos reservados.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script type="module" src="./script.js"></script>
 </body>
 </html>
