versão de pixel art

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -79,6 +79,7 @@
 
     <footer class="footer">
         <p>&copy; 2026 TMEB Consulting. Todos os direitos reservados.</p>
+        <p class="controls-hint">[LMB] Quebrar | [RMB] Colocar | [SCROLL] Trocar bloco</p>
     </footer>
 
     <script type="module" src="./script.js"></script>
