--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="logo">
-                <span class="logo-text">TMEB</span>
-                <span class="logo-subtitle">CONSULTING</span>
+                <div class="logo-text-container">
+                    <span class="logo-text">TMEB</span>
+                    <span class="logo-subtitle">CONSULTING</span>
+                </div>
             </div>
         </div>
     </nav>
