--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <meta name="twitter:description" content="Transformamos desafios tecnológicos em soluções estratégicas para empresas. Consultoria especializada em São Paulo.">
     <meta name="twitter:image" content="https://tmeb.com.br/og-image.jpg">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+
     <!-- Additional SEO -->
     <meta name="theme-color" content="#0a0a0a">
     <meta name="geo.region" content="BR-SP">
