melhora o texto do hero

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>TMEB Consulting - Consultoria de Tecnologia em São Paulo</title>
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="TMEB Consulting - Consultoria especializada em tecnologia para empresas. Transformamos desafios tecnológicos em soluções estratégicas para o seu negócio.">
-    <meta name="keywords" content="consultoria tecnologia, consultoria TI, tecnologia empresas, transformação digital, soluções tecnológicas, São Paulo, TMEB">
+    <meta name="description"
+        content="TMEB Consulting - Consultoria especializada em tecnologia para empresas. Transformamos desafios tecnológicos em soluções estratégicas para o seu negócio.">
+    <meta name="keywords"
+        content="consultoria tecnologia, consultoria TI, tecnologia empresas, transformação digital, soluções tecnológicas, São Paulo, TMEB">
     <meta name="author" content="TMEB Consulting">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://tmeb.com.br/">
@@ -17,7 +19,8 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://tmeb.com.br/">
     <meta property="og:title" content="TMEB Consulting - Consultoria de Tecnologia">
-    <meta property="og:description" content="Transformamos desafios tecnológicos em soluções estratégicas para empresas. Consultoria especializada em São Paulo.">
+    <meta property="og:description"
+        content="Transformamos desafios tecnológicos em soluções estratégicas para empresas. Consultoria especializada em São Paulo.">
     <meta property="og:image" content="https://tmeb.com.br/og-image.jpg">
     <meta property="og:locale" content="pt_BR">
     <meta property="og:site_name" content="TMEB Consulting">
@@ -26,7 +29,8 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://tmeb.com.br/">
     <meta name="twitter:title" content="TMEB Consulting - Consultoria de Tecnologia">
-    <meta name="twitter:description" content="Transformamos desafios tecnológicos em soluções estratégicas para empresas. Consultoria especializada em São Paulo.">
+    <meta name="twitter:description"
+        content="Transformamos desafios tecnológicos em soluções estratégicas para empresas. Consultoria especializada em São Paulo.">
     <meta name="twitter:image" content="https://tmeb.com.br/og-image.jpg">
 
     <!-- Favicon -->
@@ -107,19 +111,26 @@
             <div class="hero-content">
                 <p class="hero-eyebrow">Consultoria</p>
                 <h1 class="hero-title">Tecnologia com<br>propósito estratégico</h1>
+                <p class="hero-description">
+                    A TMEB combina visão de negócio, arquitetura e execução para transformar tecnologia em resultado
+                    mensurável.
+                </p>
                 <div class="hero-line"></div>
+                <a class="hero-cta" href="#contato">Fale conosco</a>
             </div>
         </section>
 
-        <section class="contact-section">
+        <section class="contact-section" id="contato">
             <div class="contact-container">
                 <h2 class="section-label">Contato</h2>
                 <div class="contact-grid">
-                    <a href="mailto:bruno.patriarca@tmeb.com.br" class="contact-item" itemscope itemtype="https://schema.org/ContactPoint">
+                    <a href="mailto:bruno.patriarca@tmeb.com.br" class="contact-item" itemscope
+                        itemtype="https://schema.org/ContactPoint">
                         <span class="contact-label">Email</span>
                         <span class="contact-value" itemprop="email">bruno.patriarca@tmeb.com.br</span>
                     </a>
-                    <a href="tel:+5511914872685" class="contact-item" itemscope itemtype="https://schema.org/ContactPoint">
+                    <a href="tel:+5511914872685" class="contact-item" itemscope
+                        itemtype="https://schema.org/ContactPoint">
                         <span class="contact-label">Telefone</span>
                         <span class="contact-value" itemprop="telephone">+55 11 91487-2685</span>
                     </a>
